# clearbox-ai-academy

./: .gitmodules  README.md
Fine-Tuning_LLM/: 1_test_training_loss.ipynb  README.md  pyproject.toml
Fine-Tuning_LLM/DPO Finetuning/: dpo_finetuning_example.ipynb
Fine-Tuning_LLM/GPT Models/: 1_How_to_finetune_GPT_model_OpenAI_API.ipynb  1_test_create_dataset.ipynb  1_test_create_dataset.txt  1_test_training_loss.ipynb
Fine-Tuning_LLM/Open Source Models/: 2_chat_templates_example.ipynb  2_sft_finetuning_eval_example.ipynb  2_sft_finetuning_example.ipynb  2_solutions_chat_template.txt  3_peft_lora.ipynb  4_lighteval_benchmark_evaluation_LLM.ipynb  sft_finetuning_example.ipynb
Fine-Tuning_LLM/OpenAI/: 1_How_to_finetune_GPT_model_OpenAI_API.ipynb
Fine-Tuning_LLM/The Project Resource Files/: The_Notebook.ipynb
Fine-Tuning_LLM/The Project Resource Files/Challenge Task/: Challenge_task.ipynb
Fine-Tuning_LLM/The Project Resource Files/Practice Task/: practice_task.ipynb  training_data.jsonl
Fine-Tuning_LLM/colab_notebooks/: 1_How_to_finetune_GPT_model_OpenAI_API.ipynb  2_chat_templates_example.ipynb  3_peft_lora.ipynb  GPT_models_dpo.ipynb
RAG_Course/: 2_different_doc_store_fetcher.ipynb  3_build_customized_rag_rerank.ipynb  5_fallbacks_branching.ipynb  6_conversational_rag.ipynb  7_custom_component.ipynb  7_query_expansion.ipynb  8_logging.ipynb  8_monitoring_pipeline.ipynb  9_conversational_rag_with_gotoweb.ipynb  9_evaluation_rag_pipeline.ipynb  README.md  docker-compose.yml  log.txt  pyproject.toml  rag_chat.py
RAG_Course/RAG Code/data/: George_RR_Martin.txt
RAG_Course/RAG Code/notebooks/: 10_conversational_rag_with_gotoweb.ipynb  3_build_customized_rag_rerank.ipynb  6_conversational_rag.ipynb  7_query_expansion.ipynb  8_logging.ipynb  9_evaluation_rag_pipeline.ipynb
RAG_Course/colab_notebooks/notebooks/: 5_fallbacks_branching.ipynb  (+2 more)
RAG_Course/data/: tolkien.txt
RAG_Course/notebooks/: 10_conversational_rag_with_gotoweb.ipynb  1_indexing_search_pipeline.ipynb  2_different_doc_store_fetcher.ipynb  3_build_customized_rag_rerank.ipynb  4_routers.ipynb  5_fallbacks_branching.ipynb  6_conversational_rag.ipynb  7_custom_component.ipynb  7_query_expansion.ipynb  8_logging.ipynb  8_monitoring_pipeline.ipynb  9_evaluation_rag_pipeline.ipynb  log.txt  rag_chat.py
(+9 files in other folders)
