[project]
name = "fine-tuning-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=3.2.0",
    "httpx==0.27.2",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "openai==1.7.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "rouge>=1.0.1",
    "scikit-learn>=1.6.1",
    "transformers>=4.48.3",
    "trl>=0.14.0",
]
