[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "elasticsearch-haystack>=1.0.1",
    "haystack-ai>=2.9.0",
    "ipykernel>=6.29.5",
    "langfuse-haystack>=0.8.0",
    "lxml-html-clean>=0.4.1",
    "nltk>=3.9.1",
    "python-dotenv>=1.0.1",
    "qdrant-haystack>=7.0.0",
    "rich>=13.9.4",
    "sentence-transformers>=3.4.0",
    "trafilatura>=2.0.0",
    "transformers>=4.48.1",
]

[tool.uv.workspace]
members = ["RAG_Course"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
